# 2-semester

./: .gitignore
lab1_ver2/: makefile
lab1_ver2/include/: map_assist_funcs.h  map_funcs.h  poly_array.h  testing.h  wAssist_funcs.h  where_assist_funcs.h  where_funcs.h
lab1_ver2/src/: main.c  map_assist_funcs.c  map_funcs.c  poly_array.c  sys_funcs.c  wAssist_funcs.c  where_assist_funcs.c  where_funcs.c
lab1_ver2/tests/: test_double_where.c  test_func_where.c  test_map_assist.c  test_map_mult_funcs.c  test_map_summ_funcs.c  test_poly_array.c  test_poly_array_NULL.c  test_poly_array_operations.c  test_where.c  test_where_assist.c  testing.c
lab_1/: main.c  makefile  readme.md  support_funcs.c  support_funcs.h  sys_funcs.h  text_blocks.c  text_blocks.h
lab_1/include/: assertions.h  support_funcs.h  testing.h  text_blocks.h
lab_1/src/: main.c  support_funcs.c  sys_funcs.c  text_blocks.c
lab_1/tests/: assertions.c  main_tests.c  test_where.c  testing.c
lab_2/: CMakeLists.txt  bug_report.md  cmakeresult.txt  gt_help.md  lab_strucrture.md  main.cpp  questions.md
lab_2/core/: ArraySequence.hpp  ArraySequenceConstructors.tpp  ArraySequenceGetMethodes.tpp  ArraySequenceInsertMethodes.tpp  DynamicArray.hpp  DynamicArray.tpp  Exceptions.hpp  ImmutableSequence.hpp  MutableArraySequence.hpp  Sequence.hpp
lab_2/src/: main.cpp
lab_2/src/UI/: arraysequencewidget.cpp  arraysequencewidget.hpp  gui_main.cpp  listsequencewidget.cpp  listsequencewidget.hpp  main.cpp  mainscreenwidget.cpp  mainscreenwidget.hpp  mainwindow.cpp  mainwindow.hpp  test_class.hpp
lab_2/src/core/: Config.hpp  Exceptions.hpp  Sequence.hpp  SuperUniquePointer.hpp
lab_2/src/core/Array/: ArraySequence.hpp  ArraySequence.tpp  ArraySequenceConstructors.tpp  ArraySequenceGetMethodes.tpp  ArraySequenceInsertMethodes.tpp  DynamicArray.hpp  DynamicArray.tpp  ImmutableArraySequence.hpp  MutableArraySequence.hpp
lab_2/src/core/BitSequence/: BitSequence.hpp  BitSequence.tpp  BitSequenceGetMethodes.tpp  BitSequenceInsertMethodes.tpp  BitSequenceOperators.tpp  BitWithProxy.hpp  ImmutableBitSequence.hpp  MutableBitSequence.hpp
lab_2/src/core/List/: ImmutableListSequence.hpp  LinkedList.hpp  LinkedList.tpp  LinkedListConstructors.tpp  LinkedListGetMethodes.tpp  LinkedListInsertMethodes.tpp  ListSequence.hpp  ListSequence.tpp  ListSequenceGetMethods.tpp  ListSequenceInsertMethods.tpp  MutableListSequence.hpp
lab_2/src/core/Sequence/: Algorithms.hpp  Sequence.hpp
lab_2/tests/: DynamicArray_tests.cpp
lab_2/tests/Array_tests/: ArraySequenceConstruct_tests.cpp  DynamicArray_tests.cpp  ImmutableArraySequence_tests.cpp  MutableArraySequence_tests.cpp  SuperUnicPointer.cpp  SuperUnicPointer.hpp
lab_2/tests/BitSequence_tests/: Bit_tests.cpp
lab_2/tests/List_tests/: ImmutableListSequence_tests.cpp  LinkedList_tests.cpp  ListSequenceConstructors_tests.cpp  MutableListSequence_tests.cpp
lab_3/: CMakeLists.txt
lab_3/src/UI/: main.cpp
lab_3/src/core/: LinearForm.hpp  LinearForm.tpp  additionalInfo.cpp  additionalInfo.hpp
lab_3/tests/: LinearForm_tests.cpp
